# guitar_stand_WLED

./: .gitmodules
firmware/: .gitignore  CMakeLists.txt  components.txt  files.txt  partitions.csv
firmware/.copilot/: doxygen-agent.md
firmware/app/event_bus/: CMakeLists.txt  app_event_bus.c  app_event_bus.h
firmware/app/gpio/: CMakeLists.txt  app_gpio.c  app_gpio.h
firmware/app/tof/: CMakeLists.txt  app_tof.c  app_tof.h
firmware/app/tof/Api/platform/inc/: vl53l0x_i2c_platform.h  vl53l0x_types.h
firmware/app/tof/Api/platform/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c  vl53l0x_platform_log.c
firmware/app/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
firmware/components/app_color_picker/: CMakeLists.txt  app_color_picker.c  app_color_picker.h  color_picker.html
firmware/components/app_wifi_manager/: CMakeLists.txt  app_wifi_manager.c  app_wifi_manager.h  captive_portal.html
firmware/main/: CMakeLists.txt  app_common.h  features.cmake  idf_component.yml  main.c
firmware/port/gpio/: CMakeLists.txt  gpio_port.c  gpio_port.h
firmware/port/i2c/: CMakeLists.txt  port_i2c.c  port_i2c.h
